Fix iconv path bug
Change-Id: I7f8eb4f3a0508cf78dbc996240d48970a3a475df

--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,8 @@ Build-Depends: debhelper (>= 10),
                libmagic-dev,
                libnautilus-extension-dev (>= 2.91.0),
                libnotify-dev (>= 0.4.3),
-               yelp-tools
+               yelp-tools,
+               file
 Standards-Version: 3.9.8
 Vcs-Bzr: https://code.launchpad.net/~ubuntu-desktop/file-roller/ubuntu
 Homepage: https://wiki.gnome.org/Apps/FileRoller
