--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Build-Depends: debhelper (>= 11),
                desktop-file-utils,
                gnome-pkg-tools (>= 0.12),
                itstool,
+               file,
                libarchive-dev (>= 3),
                libglib2.0-dev (>= 2.36.0),
                libgtk-3-dev (>= 3.13.2),
