[Bug:3363] Fix ar,jar Format Compression Error.
Change-Id: I634a4c3def7633fce51b1a700343e681aa77c2c7

--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ override_dh_makeshlibs:
 
 # p7zip is in Ubuntu "universe"
 override_dh_gencontrol:
-ifeq ($(shell dpkg-vendor --query vendor),Ubuntu)
+ifeq ($(shell dpkg-vendor --query vendor),Debian)
 	dh_gencontrol -- \
 		-Vzip:Depends='unzip, zip' \
 		-Vzip:Suggests='p7zip-full'
