--- a/debian/control.in
+++ b/debian/control.in
@@ -24,6 +24,7 @@ Homepage: https://wiki.gnome.org/Apps/FileRoller
 Package: file-roller
 Architecture: any
 Depends: bzip2,
+         binutils,
          ${zip:Depends},
          ${misc:Depends},
          ${shlibs:Depends}
