[Bug:3363]Fix ar,jar Format Compression Error
Change-Id: I3a30526801d193d0ae019500f6ee653b9585db8a

--- a/debian/control.in
+++ b/debian/control.in
@@ -23,6 +23,7 @@ Homepage: https://wiki.gnome.org/Apps/FileRoller
 Package: file-roller
 Architecture: any
 Depends: bzip2,
+         binutils,
          ${zip:Depends},
          ${misc:Depends},
          ${shlibs:Depends}
